# FitHire

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  PROJECT_SPEC.md  README.md  TEST_RESULTS.md
backend/: .env.example  .gitignore  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  seed_db.py  test_api_structure.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/routes/: __init__.py  coaches.py  jobs.py
backend/app/core/fitscore/: __init__.py  engine.py  presets.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  brand.py  coach.py  job.py  user.py
backend/app/schemas/: __init__.py  coach.py  job.py  match.py
backend/app/utils/: auth.py
backend/tests/: test_fitscore.py
docs/: FitScore_v1_Behavior_Spec.md  MVP_Definition.md  Scope_Clarifications.md  architecture.md  changelog.md  project_status.md
frontend/: .env.example  .gitignore  README.md  components.json  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/coach/: page.tsx
frontend/app/dashboard/coach/edit/: page.tsx
frontend/app/dashboard/coach/matches/: page.tsx
frontend/app/dashboard/manager/: page.tsx
frontend/app/dashboard/manager/[jobId]/: page.tsx
frontend/app/dashboard/manager/new/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/fitscore/: fitscore-display.tsx
frontend/components/forms/: coach-profile-form.tsx  job-posting-form.tsx
frontend/components/matches/: candidate-list.tsx  job-match-list.tsx
frontend/lib/: api-client.ts
